[project]
name = "rag-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-qdrant>=0.2.0",
    "langchain>=0.3.10",
    "langchain-huggingface>=0.1.2",
    "pip>=24.3.1",
    "fastembed>=0.4.2",
    "cohere>=5.13.3",
    "python-dotenv>=1.0.1",
    "langchain-cohere>=0.3.3",
]
